# agents

./: .gitignore  README.md
adr/: .gitignore  README.md  minimal-sdk.md
examples/ai_assistant_for_troubleshooting_apps/: README.md  crew.py  main.py  pyproject.toml
examples/ai_assistant_for_troubleshooting_apps/config/: agents.yaml  tasks.yaml
examples/github-mcp/: README.md  github-mcp-example.go  go.mod
examples/gsuite-mcp/: README.md  go.mod  google-doc-mcp-example.go
examples/kubernetes-mcp/: README.md  client.go  client.py  demo.yaml  go.mod  run.yaml
examples/safety/: README.md  ai_safety.md  run.yaml
examples/servicenow-mcp/: README.md  go.mod  servicenow-mcp-example.go
examples/slack-mcp/: README.md  client.go  go.mod  go.sum
examples/slack-mcp/slack/: run-mcp.sh  test-oauth.sh
mcp-discovery-configmap/: schema.json
tools/: README.md
tools/llama-stack/local/: README.md  pyproject.toml  run.yaml  setup.sh
tools/mcp-tester/: README.md  pyproject.toml  test-mcp-server.py
tools/vllm/: README.md  vllm-mac.sh
